--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -11,51 +11,52 @@
   background-repeat: no-repeat;
   min-height: 100vh;
   padding-bottom: 50px;
-  nav {
-    width: 100%;
-    padding: 50px 0;
-    background-color: rgba(255, 255, 255, 0.85);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
+}
+nav {
+  width: 100%;
+  padding: 50px 0;
+  background-color: rgba(255, 255, 255, 0.85);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+}
+.navLogo {
+  min-width: 20%;
+  img {
+    width: 90px;
   }
-  .navLogo {
-    min-width: 20%;
-    img {
-      width: 90px;
+}
+.navMenu {
+  min-width: 40%;
+  text-transform: capitalize;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  li {
+    transition: all 0.1s linear;
+    margin: 0 12px;
+    border-bottom: 2px solid transparent;
+    &:hover:not(.subMenuParent),
+    &:focus:not(.subMenuParent) {
+      transform: scale(1.3);
+      border-bottom: 2px solid $lightGreen;
     }
   }
-  .navMenu {
-    min-width: 40%;
-    text-transform: capitalize;
-    font-size: 0.8rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    li {
-      transition: all 0.1s linear;
-      margin: 0 12px;
-      border-bottom: 2px solid transparent;
-      &:hover:not(.subMenuParent),
-      &:focus:not(.subMenuParent){
-        transform: scale(1.3);
-        border-bottom: 2px solid $lightGreen;
-      }
+  .subMenuParent {
+    position: relative;
+    cursor: pointer;
+    background-color: $greenBg;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    &:hover {
+      border: 2px solid $lightGreen;
     }
-    .subMenuParent {
-      position: relative;
-      cursor: pointer;
-      background-color: $greenBg;
-      padding: 5px 10px;
-      border-radius: 5px;
-      border: 2px solid transparent;
-      &:hover {
-        border: 2px solid $lightGreen;
-      }
-    }
-    .subMenu {
+  }
+  .subMenu {
     visibility: hidden;
     padding: 15px 5px;
     height: 0;
@@ -73,120 +74,119 @@
     flex-direction: column;
     align-items: center;
     width: 480px;
-      li {
-        padding: 5px 0;
-        margin: 5px 0;
-        border-bottom: 2px solid transparent;
-        &:hover {
-          transform: scale(1.05);
-          border-bottom: 2px solid $lightGreen;
-        }
+    li {
+      padding: 5px 0;
+      margin: 5px 0;
+      border-bottom: 2px solid transparent;
+      &:hover {
+        transform: scale(1.05);
+        border-bottom: 2px solid $lightGreen;
       }
     }
-    .slideOut {
-      visibility: visible;
-      height: 200px;
-    }
   }
-  .navButtons {
-    min-width: 20%;
-    display: flex;
-    justify-content: flex-end;
-    .buttonRoundGreen {
-      margin-left: 10px;
-    }
+  .slideOut {
+    visibility: visible;
+    height: 250px;
   }
-  .headerCenter {
-    min-height: 50vh;
-    min-width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+}
+.navButtons {
+  min-width: 20%;
+  display: flex;
+  justify-content: flex-end;
+  .buttonRoundGreen {
+    margin-left: 10px;
   }
-  h1 {
-    text-align: center;
-    font-size: 3.4rem;
-    span {
-      display: block;
-    }
+}
+.headerCenter {
+  min-height: 50vh;
+  min-width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+h1 {
+  text-align: center;
+  font-size: 3.4rem;
+  span {
+    display: block;
   }
-  .dreamText {
-    padding: 50px 0;
-  }
-  .headerSearchContainer {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 2px solid black;
-    padding: 20px;
-    border-radius: 5px;
-    margin-bottom: 40px;
-    label {
-      font-size: 0.8rem;
-      color: $darkGrey;
-      margin-bottom: 10px;
-    }
-    input,
-    select {
-      font-size: 0.8rem;
-      text-transform: capitalize;
-    }
-    select {
-      background-color: transparent;
-      border: none;
-    }
-    input[type=text] {
-      border: none;
-    }
-  }
-  .headerSearchLeft {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    border-right: 1px solid $darkGrey;
-    padding-right: 20px;
-  }
-  .headerSearchMiddle {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    padding: 0 20px;
-  }
-  .headerSearchRight {
-    height: 100%;
-    button {
-      text-transform: uppercase;
-      padding: 20px 30px;
-    }
-  }
-  .popularTag {
+}
+.dreamText {
+  padding: 50px 0;
+}
+.headerSearchContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid black;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 40px;
+  label {
     font-size: 0.8rem;
     color: $darkGrey;
-    span {
-      font-weight: bold;
-      color: black;
-      margin-right: 10px;
-    }
+    margin-bottom: 10px;
   }
-  .headerStats {
-    width: 80%;
+  input,
+  select {
+    font-size: 0.8rem;
+    text-transform: capitalize;
+  }
+  select {
+    background-color: transparent;
+    border: none;
+  }
+  input[type="text"] {
+    border: none;
+  }
+}
+.headerSearchLeft {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid $darkGrey;
+  padding-right: 20px;
+}
+.headerSearchMiddle {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+}
+.headerSearchRight {
+  height: 100%;
+  button {
+    text-transform: uppercase;
+    padding: 20px 30px;
+  }
+}
+.popularTag {
+  font-size: 0.8rem;
+  color: $darkGrey;
+  span {
+    font-weight: bold;
+    color: black;
+    margin-right: 10px;
+  }
+}
+.headerStats {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.companyUserLogos {
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  div {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-  }
-  .companyUserLogos {
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    div {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
-    }
+    padding: 10px;
   }
 }
