--- a/src/styles/pages/_pricing.scss
+++ b/src/styles/pages/_pricing.scss
@@ -1,97 +1,20 @@
 @use "../base/variables" as *;
 
 .pricingHeader {
-  background-color: $greenBg;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding-bottom: 100px;
-  h1 {
-    margin-bottom: 20px;
-  }
+  background-color: $greenBg;
   nav {
-    width: 100%;
-    padding: 50px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .navLogo {
-    min-width: 20%;
-    img {
-      width: 90px;
-    }
-  }
-  .navMenu {
-    min-width: 40%;
-    text-transform: capitalize;
-    font-size: 0.8rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    li {
-      transition: all 0.1s linear;
-      margin: 0 12px;
-      border-bottom: 2px solid transparent;
-      &:hover:not(.subMenuParent),
-      &:focus:not(.subMenuParent) {
-        transform: scale(1.3);
-        border-bottom: 2px solid $lightGreen;
-      }
-    }
-  }
-  .subMenuParent {
     position: relative;
-    cursor: pointer;
+    z-index: 100;
     background-color: $greenBg;
-    padding: 5px 10px;
-    border-radius: 5px;
-    border: 2px solid transparent;
-    &:hover {
-      border: 2px solid $lightGreen;
-    }
   }
-  .subMenu {
-    visibility: hidden;
-    padding: 15px 5px;
-    height: 0;
-    background-color: $greenBg;
-    position: absolute;
-    height: 0px;
-    top: 40px;
-    left: -199px;
-    transition: all 0.3s linear;
-    overflow: hidden;
-    border: 2px solid $brown;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: 480px;
-    li {
-      padding: 5px 0;
-      margin: 5px 0;
-      border-bottom: 2px solid transparent;
-      &:hover {
-        transform: scale(1.05);
-        border-bottom: 2px solid $lightGreen;
-      }
-    }
-  }
-  .slideOut {
-    visibility: visible;
-    height: 200px;
-  }
-  .navButtons {
-    min-width: 20%;
-    display: flex;
-    justify-content: flex-end;
-    .buttonRoundGreen {
-      margin-left: 10px;
-    }
-  }
+}
+h1 {
+  margin-bottom: 20px;
 }
 .pricingPlan {
   width: 100%;
