--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -67,7 +67,7 @@ nav {
     left: -199px;
     transition: all 0.3s linear;
     overflow: hidden;
-    border: 2px solid $brown;
+    border: 1px solid $lightGreen;
     border-radius: 5px;
     display: flex;
     justify-content: center;
