--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -1,1 +1,35 @@
 @use "../base/variables" as *;
+
+.jobsHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: $greenBg;
+  nav {
+    position: relative;
+    z-index: 100;
+    background-color: $greenBg;
+  }
+}
+.filtersForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.filtersTop {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.filtersBottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.filterButtons {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
