--- a/src/styles/pages/_pricing.scss
+++ b/src/styles/pages/_pricing.scss
@@ -30,6 +30,7 @@ h1 {
 .pricingCards {
   width: 100%;
   display: flex;
+  // flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   li {
@@ -38,16 +39,21 @@ h1 {
     justify-content: center;
     align-items: center;
     width: calc(100% / 3 - 20px);
+    min-width: 320px;
+    flex-wrap: wrap;
     border: 2px solid $green;
     border-radius: 20px;
-    padding: 40px 30px;
+    padding: 40px 20px;
+    p {
+      font-size: 0.9rem;
+    }
   }
   h5 {
     margin-bottom: 30px;
   }
   h4 {
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
     position: relative;
     width: 50%;
     min-width: 130px;
