--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -11,25 +11,123 @@
     z-index: 100;
     background-color: $greenBg;
   }
+  span {
+    margin-bottom: 60px;
+  }
+}
+.jobsMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.jobsFilter {
+  width: 100%;
+  margin: 100px 0;
 }
 .filtersForm {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  label {
+    font-size: 0.7rem;
+    font-weight: bold;
+  }
 }
 .filtersTop {
+  margin-top: 20px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .filtersBottom {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  margin: 40px 0;
 }
 .filterButtons {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding-top: 20px;
+  border-top: 1px solid $darkGrey;
+  button {
+    // margin: 0 20px;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+  }
+}
+.filtersKeyword,
+.filtersCategories,
+.filtersLocation {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: calc(100% / 3 - 30px);
+  input {
+    width: 80%;
+    min-width: 230px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 0.7rem;
+    padding: 5px;
+  }
+}
+.filtersType,
+.filtersExperience,
+.filtersSalary {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  p {
+    font-size: 0.7rem;
+    font-weight: bold;
+  }
+}
+.filtersType {
+  min-width: 175px;
+}
+.filtersExperience {
+  min-width: 275px;
+}
+.typeGroup div,
+.experienceGroup div,
+.salaryGroup div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  label {
+    font-weight: normal;
+    margin-left: 4px;
+  }
+}
+.typeGroup,
+.experienceGroup,
+.salaryGroup {
+  margin-left: 12px;
+}
+.salaryGroup {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .salaryRange {
+    width: 250px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    p {
+      font-weight: normal;
+      width: 115px;
+    }
+    span {
+      width: 20px;
+      font-size: 0.7rem;
+    }
+  }
 }
