--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -711,6 +711,7 @@ h1 span {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 100px 0;
 }
 .categories .categoriesWrapped {
   display: flex;
