--- a/src/styles/layout/_categories.scss
+++ b/src/styles/layout/_categories.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 100px 0;
   .categoriesWrapped {
     display: flex;
     flex-direction: column;
