--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -6,6 +6,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.footerLogo {
+  width: 90px;
+}
 .footerTop {
   padding: 100px 0;
   width: 100%;
